syntax = "proto3";

option go_package = ".;messages";
package messages;

enum EventType {
  SUBSCRIPTION_CREATED = 0;
  SEND_DISPATCH = 1;
  SUBSCRIPTION_CANCELLED = 2;
}